--- a/index (1).html
+++ b/index (1).html
@@ -75,7 +75,7 @@
 						<p class="sinMargen">DOBLEMENTE ARTICULADO QUE TRANSITE EN CAMINOS Y PUENTES DE</p>
 						<p class="sinMargen">JURISDICCIÓN FEDERAL</p>
 					</div>
-<p class="derechaNegro">Autorización Número: AUT6621MOBM28042025021672918</p>
+<p class="derechaNegro">Autorización Número: AUT8821MOBM28042025021102713</p>
 
 					<p class="justificado">Que el permisionario denominado
 						MONICA ALEJANDRA MONREAL BERNAL con Registro Federal de
@@ -128,16 +128,16 @@
 							<th class="borde">Calcomanía</th>
 						</tr>
 						<tr class="borde">
-							<td class="borde">FREIGHLINER</td>
+							<td class="borde">KENWORTH</td>
 							<td class="borde">TRACTOR</td>
 							<td class="borde">TRACTOR DE TRES EJES</td>
-							<td class="borde">2011</td>
-							<td class="borde">1FUJGLDR0BLAY2058</td>
-							<td class="borde">48AX9F</td>
-							<td class="borde">472903S0046968</td>
+							<td class="borde">2015</td>
+							<td class="borde">1XKYD49X2FJ428870</td>
+							<td class="borde">63AX6F</td>
+							<td class="borde">79748823</td>
 							<td class="borde">MÉXICO</td>
 							<td class="borde">3</td>
-							<td class="borde">0456132</td>
+							<td class="borde">0456133</td>
 						</tr>
 
 					</tbody></table>
